# SoftwareTestingCriterionProject

./: Cargo.toml  README.md  criterion_profile.sh
benches/: connect4.rs  connect4_gungraun.rs  connect4_states_per_second.rs  connect4_time.rs  example_min.rs  matrix_mult.rs  min.rs  positions_per_second.rs  sorts.rs  states_per_second.rs  total_time.rs
positions/: positions12  positions13  positions14  positions15  positions16  positions17  positions18  positions19  positions20  positions21  positions22  positions23  positions24  positions25  positions26  positions27  positions28  positions29  positions30
reports/array_vs_bitboard_sps/array/new/: benchmark.json  estimates.json  tukey.json  (+1 more)
reports/array_vs_bitboard_sps/report/: index.html
reports/array_vs_bitboard_time/report/: index.html
reports/different_methods_sps/report/: index.html
reports/matrix_mult_large/report/: index.html
reports/matrix_mult_medium/report/: index.html
reports/matrix_mult_small/report/: index.html
reports/min_different_threads/report/: index.html
reports/min_with_max_threads/report/: index.html
reports/multiple_depths_sps/report/: index.html
reports/multiple_depths_time/report/: index.html
reports/report/: index.html
reports/single_depth_time/report/: index.html
reports/sort_random/report/: index.html
reports/sort_rev/report/: index.html
reports/sort_sorted/report/: index.html
src/: cache_strategy.rs  connect_four.rs  engine.rs  evaluate_position_util.rs  example_min.rs  lib.rs  main.rs  min.rs  naive.rs  piece.rs  state.rs  threads.rs
src/connect_four/: cache_strategy.rs  naive.rs  piece.rs  solver_util.rs  state.rs  state_array.rs  state_bitboard.rs  state_file.rs  threads.rs
src/sorts/: sorts.rs
(+842 files in other folders)
