[package]
name = "software_testing_project"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6"
rand = "0.9.2"
rand_pcg = "0.9.0"

[dev-dependencies]
criterion = "0.8.0"
gungraun = "0.17"

[profile.release]
strip = true

[profile.bench]
debug = true
strip = false

[[bench]]
name = "example_min"
harness = false

[[bench]]
name = "sorts"
harness = false

[[bench]]
name = "connect4_time"
harness = false

[[bench]]
name = "connect4_states_per_second"
harness = false

[[bench]]
name = "connect4_gungraun"
harness = false
